--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-notify": "~0.3.0",
     "grunt-sass": "~0.14.0",
+    "grunt-sass-globbing": "^1.0.2",
     "grunt-webfont": "^0.4.7",
     "jit-grunt": "^0.9.0"
   }
