--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-combine-media-queries": "^1.0.19",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-compass": "~0.9.0",
+    "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-uglify": "~0.5.0",
