--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-image-resize": "^1.0.0",
     "grunt-notify": "~0.3.0",
     "grunt-sass": "~0.14.0",
     "grunt-sass-globbing": "^1.0.3",
     "grunt-spritesmith": "^3.6.0",
-    "grunt-spritesmith-hd": "^0.3.5",
     "jit-grunt": "^0.9.0"
   }
 }
