--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
   "name": "projectname",
   "version": "1.0.0",
   "devDependencies": {
-    "gm": "^1.17.0",
+    "autoprefixer-core": "^5.1.5",
+    "im": "^1.17.0",
     "grunt": "~0.4.5",
-    "grunt-autoprefixer": "~0.8.2",
     "grunt-browser-sync": "~1.1.2",
     "grunt-combine-media-queries": "^1.0.19",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-csso": "^0.7.0",
     "grunt-image-resize": "^1.0.0",
-    "grunt-notify": "~0.3.0",
     "grunt-sass": "~0.14.0",
     "grunt-sass-globbing": "^1.0.3",
     "grunt-spritesmith": "^3.6.0",
