--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "devDependencies": {
     "autoprefixer-core": "^5.1.5",
-    "im": "^1.17.0",
     "grunt": "~0.4.5",
+    "grunt-autoprefixer": "^2.2.0",
     "grunt-browser-sync": "~1.1.2",
     "grunt-combine-media-queries": "^1.0.19",
     "grunt-concurrent": "~0.5.0",
@@ -17,6 +17,7 @@
     "grunt-sass": "~0.14.0",
     "grunt-sass-globbing": "^1.0.3",
     "grunt-spritesmith": "^3.6.0",
+    "im": "^0.2.3",
     "jit-grunt": "^0.9.0"
   }
 }
