--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
 .sass-cache/**/*
 node_modules/**/*
-*.map
-*.css
-assets/css/media-merge/style.css
-assets/css/media-merge/style.min.css
-assets/css/media-merge/style-lt-ie9.css
-assets/css/media-merge/style-lt-ie9.min.css
-assets/css/style.css
-assets/css/style.css.map
-assets/css/style.min.css
-assets/css/style-lt-ie9.css
-assets/css/style-lt-ie9.css.map
-assets/css/style-lt-ie9.min.css
-assets/images/auto-sprite/LD-primary-autosprite.png
+assets/images/auto-sprite/*.png
+assets/css/**/*.css
+assets/css/**/*.map
+!assets/css/style-lt-ie9.css
+!assets/css/style.css
