Removing min and merged JS from Git

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ assets/images/auto-sprite/*.png
 assets/css/**/*.css
 assets/css/**/*.map
 grunt-start-up.txt
+assets/js/**/*.min.js
+assets/js/merged.js
