Ignoring retina sprite generated SASS files

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ assets/js/**/*.min.js
 assets/js/merged.js
 assets/sass/import-maps/*.scss
 00-creating new git.txt
+assets/sass/00-config/sprite-sheets/HD-retina-sprites.scss
+assets/sass/00-config/sprite-sheets/LD-nonRetina-sprites.scss
