Updating PHP structure

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ assets/sass/import-maps/*.scss
 00-creating new git.txt
 assets/sass/00-config/sprite-sheets/HD-retina-sprites.scss
 assets/sass/00-config/sprite-sheets/LD-nonRetina-sprites.scss
+.ftppass
