--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "grunt-combine-media-queries": "^1.0.19",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-sass": "*",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-csso": "~0.7.0",
+    "grunt-ftpush": "^0.3.3",
     "grunt-image-resize": "~1.0.0",
-    "grunt-contrib-sass": "*",
     "grunt-sass-globbing": "~1.0.3",
     "grunt-spritesmith": "~3.6.0",
     "im": "~0.2.3",
