--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ assets/sass/import-maps/*.scss
 assets/sass/00-config/sprite-sheets/HD-retina-sprites.scss
 assets/sass/00-config/sprite-sheets/LD-nonRetina-sprites.scss
 .ftppass
+grunt-first-time.txt
