--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ assets/images/auto-sprite/*.png
 assets/css/**/*.css
 assets/css/**/*.map
 grunt-start-up.txt
-assets/js/**/*.min.js
+assets/js/*.min.js
 assets/js/merged.js
 assets/sass/import-maps/*.scss
 00-creating new git.txt
