removing some generated files from Git

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,18 @@
 .sass-cache/**/*
 node_modules/**/*
-2015/assets/images/auto-sprite/*.png
-2015/assets/css/**/*.css
-2015/assets/css/**/*.map
+website/assets/images/auto-sprite/*.png
+website/assets/css/**/*.css
+website/assets/css/**/*.map
 grunt-start-up.txt
-2015/assets/js/*.min.js
-2015/assets/js/merged.js
-!2015/assets/js/merged.min.js
-2015/assets/sass/import-maps/*.scss
+website/assets/js/*.min.js
+website/assets/js/merged.js
+!website/assets/js/merged.min.js
+website/assets/sass/import-maps/*.scss
 00-creating new git.txt
-2015/assets/sass/01-config/sprite-sheets/HD-retina-sprites.scss
-2015/assets/sass/01-config/sprite-sheets/LD-nonRetina-sprites.scss
+website/assets/sass/01-config/sprite-sheets/HD-retina-sprites.scss
+website/assets/sass/01-config/sprite-sheets/LD-nonRetina-sprites.scss
 .ftppass
 grunt-first-time.txt
 .grunt/ftpush/uat.json
-DoC_2014-15_AR_package.zip
-2015.zip
-2015/assets/js/ZZ-merged-JS/
+website.zip
+website/assets/js/ZZ-merged-JS/
