--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "2.0.0",
   "author": "Daniel Tonon",
   "devDependencies": {
+    "autoprefixer": "^6.0.3",
+    "css-mqpacker": "^4.0.0",
     "grunt": "~0.4.5",
     "grunt-browser-sync": "^1.1.2",
     "grunt-combine-media-queries": "^1.0.19",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-concat": "~0.5.0",
-    "grunt-sync": "^0.4.1",
     "grunt-contrib-sass": "*",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-csso": "~0.7.0",
     "grunt-ftpush": "^0.3.3",
     "grunt-image-resize": "~1.0.0",
+    "grunt-postcss": "^0.7.0",
     "grunt-sass-globbing": "~1.0.3",
-	"grunt-spritesmith": "~3.6.0",
+    "grunt-spritesmith": "~3.6.0",
+    "grunt-sync": "^0.4.1",
     "im": "~0.2.3",
     "jit-grunt": "~0.9.0"
   }
