--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-spritesmith": "~3.6.0",
     "grunt-sync": "^0.4.1",
     "im": "~0.2.3",
-    "jit-grunt": "~0.9.0"
+    "jit-grunt": "~0.9.0",
+    "postcss-flexibility": "^1.0.1"
   }
 }
