--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt-combine-media-queries": "^1.0.19",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-sass": "*",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
