Moved icon-names file into "generated-files" folder
To dissuade people from editing the icon-names file directly, I've moved it into a "generated-files" folder along with the import map files

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,6 @@ grunt-first-time.txt
 .grunt/ftpush/uat.json
 prototype.zip
 prototype/assets/js/generated-JS/
-prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/import-maps/
+prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/generated-files/**/*.scss
 prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/01-sprite-sheets/
 prototype/00-source-files/02-js/generated-JS/
