adding flexibility to package.json and updating comment in grunt file

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-sync": "^0.4.1",
     "grunt-text-replace": "^0.4.0",
     "im": "~0.2.3",
-    "jit-grunt": "~0.9.0"
+    "jit-grunt": "~0.9.0",
+    "postcss-flexibility": "^1.0.1"
   }
 }
