--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Swordion",
-  "version": "2.0.0",
+  "name": "swordion",
+  "version": "3.2.0",
   "author": "Daniel Tonon",
   "devDependencies": {
     "autoprefixer": "^6.0.3",
@@ -24,8 +24,26 @@
     "grunt-spritesmith": "~3.6.0",
     "grunt-sync": "^0.4.1",
     "grunt-text-replace": "^0.4.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.5.3",
     "im": "~0.2.3",
     "jit-grunt": "~0.9.0",
-    "postcss-flexibility": "^1.0.1"
-  }
+    "postcss-flexibility": "^1.0.1",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.5"
+  },
+  "description": "A feature rich website framework that makes life easy for front end developers. It supports IE8+ and all major browsers.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://Dan503@github.com/Dan503/Swordion.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Dan503/Swordion/issues"
+  },
+  "homepage": "https://github.com/Dan503/Swordion#readme"
 }
