--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ prototype/assets/js/generated-JS/
 prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/generated-files/**/*.scss
 prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/01-sprite-sheets/
 prototype/00-source-files/02-js/generated-JS/
+node_modules
+*.log
+build
+tmp
+.grunt
+.DS_Store
