--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "gulp-jshint": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
+    "gulp-sass-glob": "^1.0.5",
+    "gulp-sequence": "^0.4.5",
     "gulp-uglify": "^1.5.3",
     "im": "~0.2.3",
     "jit-grunt": "~0.9.0",
+    "jshint": "^2.9.1",
     "postcss-flexibility": "^1.0.1",
     "require-dir": "^0.3.0",
-    "run-sequence": "^1.1.5"
   },
   "description": "A feature rich website framework that makes life easy for front end developers. It supports IE8+ and all major browsers.",
   "repository": {
