--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.2.0",
   "author": "Daniel Tonon",
   "devDependencies": {
-    "autoprefixer": "^6.0.3",
+    "autoprefixer": "^6.3.4",
     "css-mqpacker": "^4.0.0",
     "cssnano": "^3.4.0",
     "grunt": "~0.4.5",
@@ -26,7 +26,9 @@
     "grunt-text-replace": "^0.4.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-debug": "^2.1.2",
     "gulp-jshint": "^2.0.0",
+    "gulp-postcss": "^6.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-sass-glob": "^1.0.5",
@@ -35,7 +37,7 @@
     "im": "~0.2.3",
     "jit-grunt": "~0.9.0",
     "jshint": "^2.9.1",
-    "postcss-flexibility": "^1.0.1",
+    "postcss-flexibility": "^1.0.3",
     "require-dir": "^0.3.0"
   },
   "description": "A feature rich website framework that makes life easy for front end developers. It supports IE8+ and all major browsers.",
