--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-text-replace": "^0.4.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-copy": "0.0.2",
     "gulp-debug": "^2.1.2",
     "gulp-jshint": "^2.0.0",
     "gulp-postcss": "^6.1.0",
