icomoon unpackager for gulp
The task isn't connected into the sass compilation function yet but this is the core icomoon unpackager functionality

--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "gulp-connect-php": "0.0.7",
     "gulp-copy": "0.0.2",
     "gulp-debug": "^2.1.2",
+    "gulp-footer": "^1.0.5",
+    "gulp-header": "^1.7.1",
     "gulp-jshint": "^2.0.0",
     "gulp-postcss": "^6.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.2.0",
     "gulp-sass-glob": "^1.0.5",
     "gulp-sequence": "^0.4.5",
