--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ prototype-site/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/01-sprite-sheets/
 prototype-site/00-source-files/02-js/generated-JS/
 prototype-site/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/icon-names.scss
 gulp-start-up.txt
+build-site/assets/
