--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "browser-sync": "^2.11.2",
     "css-mqpacker": "^4.0.0",
     "cssnano": "^3.5.2",
+    "del": "^2.2.0",
     "grunt": "~0.4.5",
     "grunt-banner": "^0.6.0",
     "grunt-browser-sync": "^1.1.2",
