--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "browser-sync": "^2.11.2",
     "css-mqpacker": "^4.0.0",
     "cssnano": "^3.5.2",
+    "customizr": "^1.0.0-alpha",
     "del": "^2.2.0",
     "grunt": "~0.4.5",
     "grunt-banner": "^0.6.0",
@@ -35,6 +36,7 @@
     "gulp-footer": "^1.0.5",
     "gulp-header": "^1.7.1",
     "gulp-jshint": "^2.0.0",
+    "gulp-modernizr": "^1.0.0-alpha",
     "gulp-postcss": "^6.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
