--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "im": "~0.2.3",
     "jit-grunt": "~0.9.0",
     "postcss-flexibility": "^1.0.3",
+    "postcss-pxtorem": "^3.3.1",
     "require-dir": "^0.3.0"
   },
   "description": "A feature rich website framework that makes life easy for front end developers. It supports IE8+ and all major browsers.",
