--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "swordion",
-  "version": "3.2.0",
+  "version": "4.0.0",
   "author": "Daniel Tonon",
   "devDependencies": {
     "autoprefixer": "^6.3.4",
+    "babel-cli": "^6.8.0",
     "browser-sync": "^2.11.2",
     "cssnano": "^3.5.2",
     "customizr": "^1.0.0-alpha",
